@@ -88,6 +88,9 @@ Version 2.0.0rc6 - The '???' version.
 		  Destroy() the socket immediately.
 		* Fixed a lot of bugs in amuleweb. In particular, stop / pause
 		  / cancel / priority(up/down) now works.
+		* Removed bubble sort code in download queue from amuleweb.
+		  This code did not scale for large number of files, like
+		  hundreds. There is still room for improovement here.
 
 	rommel:
 		* Patch to implement the commands serverconnect and reloadipf
